<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.opensrp</groupId>
    <artifactId>openlmis</artifactId>
    <packaging>pom</packaging>
    <version>0.1-SNAPSHOT</version>
    <name>openlmis</name>
    <url>http://github.com/OpenSRP/opensrp-server</url>

    <modules>
        <module>openlmis-stock</module>
    </modules>

    <properties>
        <main.basedir>${project.basedir}</main.basedir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring.version>5.2.4.RELEASE</spring.version>
        <spring.data.version>2.2.4.RELEASE</spring.data.version>
        <mybatis.version>3.5.4</mybatis.version>
        <mybatis.spring.version>2.0.3</mybatis.spring.version>
        <mysql.connector.version>5.1.36</mysql.connector.version>
        <jackson.version>2.10.0</jackson.version>
        <opensrp.updatePolicy>always</opensrp.updatePolicy>
    </properties>

    <distributionManagement>
        <repository>
            <id>opensrp.nexus</id>
            <name>OpenSRP Releases Repository</name>
            <url>http://ci.smartregistries.org:8081/nexus/content/repositories/releases</url>
            <uniqueVersion>false</uniqueVersion>
        </repository>
        <snapshotRepository>
            <id>opensrp.nexus</id>
            <name>OpenSRP Snapshots Repository</name>
            <url>http://ci.smartregistries.org:8081/nexus/content/repositories/opensrp-server</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>

    <pluginRepositories>
        <pluginRepository>
            <id>jasmine-js-bdd</id>
            <name>Jasmine JavaScript BDD Repository</name>
            <url>https://searls-maven-repository.googlecode.com/svn/trunk/snapshots</url>
        </pluginRepository>
    </pluginRepositories>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2</url>
            <name>Repository for dependencies</name>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>spring-maven-release</id>
            <name>Spring Maven Release Repository</name>
            <url>https://maven.springframework.org/release</url>
        </repository>
        <repository>
            <id>spring-maven-milestone</id>
            <name>Spring Maven Milestone Repository</name>
            <url>https://maven.springframework.org/milestone</url>
        </repository>
    </repositories>
    <profiles>
        <profile>
            <id>skip-integration-tests</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>2.9</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                                <configuration>
                                    <argLine>-XX:MaxPermSize=1024M</argLine>
                                    <excludes>
                                        <exclude>**/it/**</exclude>
                                    </excludes>
                                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>integration-tests</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>

            <build>
                <!-- <pluginManagement> -->
                <!-- </pluginManagement> -->
            </build>
        </profile>
        <profile>
            <id>couchDb</id>
            <activation>
                <property>
                    <name>opensrp.database.type</name>
                    <value>couchdb</value>
                </property>
            </activation>
            <properties>
                <opensrp.database.profile>couchdb</opensrp.database.profile>
            </properties>
        </profile>
        <profile>
            <id>postgres</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <property>
                    <name>opensrp.database.type</name>
                    <value>postgres</value>
                </property>
            </activation>
            <properties>
                <opensrp.database.profile>postgres</opensrp.database.profile>
            </properties>
        </profile>
    </profiles>
    <build>
        <!-- <pluginManagement> -->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <outputDirectory/>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.5</version>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>properties-maven-plugin</artifactId>
                <version>1.0-alpha-2</version>
                <executions>
                    <execution>
                        <phase>initialize</phase>
                        <goals>
                            <goal>read-project-properties</goal>
                        </goals>
                        <configuration>
                            <files>
                                <file>${main.basedir}/assets/config/openlmis.properties</file>
                            </files>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <printSummary>true</printSummary>
                    <excludes>
                        <exclude>**/it/**</exclude>
                    </excludes>
                    <forkCount>3</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.7.9</version>
                <configuration>
                    <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
                    <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
                </configuration>
                <executions>
                    <execution>
                        <id>jacoco-initialize</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>jacoco-site</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.eluder.coveralls</groupId>
                <artifactId>coveralls-maven-plugin</artifactId>
                <version>4.0.0</version>
            </plugin>

        </plugins>
        <!-- </pluginManagement> -->
        <pluginManagement>
            <plugins>
            <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
            	<plugin>
            	<groupId>org.eclipse.m2e</groupId>
            	<artifactId>lifecycle-mapping</artifactId>
            	<version>1.0.0</version>
            	<configuration>
            		<lifecycleMappingMetadata>
            			<pluginExecutions>
            				<pluginExecution>
            					<pluginExecutionFilter>
            						<groupId>org.codehaus.mojo</groupId>
            						<artifactId>
            							properties-maven-plugin
            						</artifactId>
            						<versionRange>
            							[1.0-alpha-2,)
            						</versionRange>
            						<goals>
            							<goal>
            								read-project-properties
            							</goal>
            						</goals>
            					</pluginExecutionFilter>
            					<action>
            						<ignore></ignore>
            					</action>
            				</pluginExecution>
            			</pluginExecutions>
            		</lifecycleMappingMetadata>
            	</configuration>
            	</plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
